Add slide Aller plus loin

--- a/talk/REST-in-peace/index.html
+++ b/talk/REST-in-peace/index.html
@@ -1155,11 +1155,22 @@ On peut aussi ajouter la première et la dernière page <code>rel=first</code> e
 </section>
   </div>
   <div class="slide hidden" id="slide-38">
-    <section class="slide-content"><h3 id="plus-loin">Plus loin</h3>
+    <section class="slide-content"><h3 id="aller-plus-loin">Aller plus loin</h3>
 <ul>
 <li>Authentification</li>
-<li>Test</li>
-<li>Spécification</li>
+<li>Test<ul>
+<li>Codeception</li>
+<li>behat-rest-testing</li>
+<li>RAML + PHPUnit</li>
+<li>CasperJS</li>
+</ul>
+</li>
+<li>Spécification<ul>
+<li>json:api</li>
+<li>JSON Schema</li>
+<li>RAML</li>
+</ul>
+</li>
 </ul>
 </section>
   </div>
